--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	  <meta name="viewport" content="width=device-width, initial-scale=1">
 	  <title>Module3-Solution</title>
-	  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	  <link rel="stylesheet" type="text/css" href="css/styles.css">
+	  <link rel="stylesheet" type="text/css" href="module3-solution/css/bootstrap.min.css">
+	  <link rel="stylesheet" type="text/css" href="module3-solution/css/styles.css">
   </head>
 <body>
   <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
@@ -67,8 +67,8 @@
   </footer>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="module3-solution/js/jquery-2.1.4.min.js"></script>
+  <script src="module3-solution/js/bootstrap.min.js"></script>
+  <script src="module3-solution/js/script.js"></script>
 </body>
 </html>
