--- a/index.html
+++ b/index.html
@@ -1,74 +1,108 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-	  <meta charset="utf-8">
-	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <title>Module3-Solution</title>
-	  <link rel="stylesheet" type="text/css" href="module3-solution/css/bootstrap.min.css">
-	  <link rel="stylesheet" type="text/css" href="module3-solution/css/styles.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>David Chu's China Bistro</title>
+    <link rel="stylesheet" href="module4-solution/css/bootstrap.min.css">
+    <link rel="stylesheet" href="module4-solution/css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
 <body>
-  <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
-  	<div class="container">
-   	  	<div class="navbar-header">
-  	  	  <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar" aria-controls="bs-navbar" aria-expanded="false">
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="index.html" class="pull-left visible-md visible-lg">
+            <div id="logo-img" alt="Logo image"></div>
+          </a>
+
+          <div class="navbar-brand">
+            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
+            <p>
+              <img src="module4-solution/images/star-k-logo.png" alt="Kosher certification">
+              <span>Kosher Certified</span>
+            </p>
+          </div>
+
+          <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-  	  	  <a class="navbar-brand" href="index.html"><h1>Food, LLC</h1></a>
-  	  	</div> <!--.navbar-header-->
-        <nav id="bs-navbar" class="collapse navbar-collapse">
-  		    <ul id="nav-list" class="nav navbar-nav navbar-right">
-  	  		  <li><a href="#chicken" class="hidden-sm hidden-md hidden-lg">Chicken</a></li>
-  	  		  <li><a href="#beef" class="hidden-sm hidden-md hidden-lg">Beef</a></li>
-  	  		  <li><a href="#sushi" class="hidden-sm hidden-md hidden-lg">Sushi</a></li>
-  	  	  </ul> <!-- #nav-list -->
-  	  	</nav> <!-- #bs-navbar -->
-  	</div> <!-- .container -->
+        </div>
+        
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+           <ul id="nav-list" class="nav navbar-nav navbar-right">
+            <li id="navHomeButton" class="visible-xs active">
+              <a href="index.html">
+                <span class="glyphicon glyphicon-home"></span> Home</a>
+            </li>
+            <li id="navMenuButton">
+              <a href="#" onclick="$dc.loadMenuCategories();">
+                <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
+            </li>
+            <li id="phone" class="hidden-xs">
+              <a href="tel:410-602-5008">
+                <span>410-602-5008</span></a><div>* We Deliver</div>
+            </li>
+          </ul><!-- #nav-list -->
+        </div><!-- .collapse .navbar-collapse -->
+      </div><!-- .container -->
+    </nav><!-- #header-nav -->
   </header>
 
-  <div id="main-content" class="container">
-  	<h1 id="main-menu" class="text-center">Our Menu</h1>
-  	<div class="row">
-  	  <div class="menu-tile col-xs-12 col-sm-6 col-md-4 col-lg-4">
-  		  <div id="chicken">
-  		    <h3 class="text-center">Chicken</h3>
-		      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida lectus urna, ac auctor massa lobortis non. Donec hendrerit ut mi vitae commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer ullamcorper arcu eu convallis rutrum. Maecenas facilisis pulvinar sem, accumsan euismod eros commodo vel. In leo quam, tristique sit amet ullamcorper vel, egestas eu dui. Morbi consequat mauris ac tellus porta tempor. Ut imperdiet ex nec nisi interdum, nec hendrerit nisl aliquam. Nulla commodo dolor eget lacinia bibendum. Sed consequat pellentesque urna condimentum eleifend. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Quisque ut ligula justo. Integer quis commodo eros, id aliquet tellus. Fusce nec magna vitae sem faucibus bibendum id non libero. Aenean bibendum purus nec neque dignissim, hendrerit ultricies libero dignissim. Vestibulum eu sapien quis enim finibus elementum. In ut blandit dolor. Donec semper nisi enim, sit amet pellentesque lorem pulvinar in. Maecenas tincidunt varius enim, lobortis auctor turpis tincidunt at. Donec scelerisque finibus dolor eu venenatis. Donec id vestibulum erat, vitae faucibus purus. Cras suscipit pellentesque ligula eget vestibulum. Suspendisse sodales fringilla lorem nec consequat. Etiam commodo neque justo, vel ultrices mauris condimentum sed. Aliquam maximus cursus tortor nec volutpat. Integer condimentum, metus sit amet congue imperdiet, nisl turpis tincidunt est, et rhoncus quam tortor ut nulla. Aliquam cursus est vitae semper cursus. Donec pharetra orci vel magna pharetra, ut pulvinar odio vehicula. Morbi fermentum nisl non vehicula porttitor. Maecenas nulla enim, pellentesque sit amet pellentesque eget, faucibus vitae metus. Nam venenatis sem lorem, posuere facilisis nulla sollicitudin a. Suspendisse sodales sem et velit auctor pharetra. Quisque aliquet accumsan enim eu vestibulum. Cras sit amet porta ligula. Integer tempor, libero vel semper hendrerit, sem quam molestie eros, id viverra tellus est ut neque.</p>
-		  
-		      <p id="back-to-top" class="text-right"><a class="glyphicon glyphicon-home" href="#top"><span> Back to Top</span></a></p>
-  		  </div>
-  	  </div>
-
-  	  <div class="menu-tile col-xs-12 col-sm-6 col-md-4 col-lg-4">
-  		  <div id="beef">
-          <h3 id="beef" class="text-center">Beef</h3>
-  		    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida lectus urna, ac auctor massa lobortis non. Donec hendrerit ut mi vitae commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer ullamcorper arcu eu convallis rutrum. Maecenas facilisis pulvinar sem, accumsan euismod eros commodo vel. In leo quam, tristique sit amet ullamcorper vel, egestas eu dui. Morbi consequat mauris ac tellus porta tempor. Ut imperdiet ex nec nisi interdum, nec hendrerit nisl aliquam. Nulla commodo dolor eget lacinia bibendum. Sed consequat pellentesque urna condimentum eleifend. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Quisque ut ligula justo. Integer quis commodo eros, id aliquet tellus. Fusce nec magna vitae sem faucibus bibendum id non libero. Aenean bibendum purus nec neque dignissim, hendrerit ultricies libero dignissim. Vestibulum eu sapien quis enim finibus elementum. In ut blandit dolor. Donec semper nisi enim, sit amet pellentesque lorem pulvinar in. Maecenas tincidunt varius enim, lobortis auctor turpis tincidunt at. Donec scelerisque finibus dolor eu venenatis. Donec id vestibulum erat, vitae faucibus purus. Cras suscipit pellentesque ligula eget vestibulum. Suspendisse sodales fringilla lorem nec consequat. Etiam commodo neque justo, vel ultrices mauris condimentum sed. Aliquam maximus cursus tortor nec volutpat. Integer condimentum, metus sit amet congue imperdiet, nisl turpis tincidunt est, et rhoncus quam tortor ut nulla. Aliquam cursus est vitae semper cursus. Donec pharetra orci vel magna pharetra, ut pulvinar odio vehicula. Morbi fermentum nisl non vehicula porttitor. Maecenas nulla enim, pellentesque sit amet pellentesque eget, faucibus vitae metus. Nam venenatis sem lorem, posuere facilisis nulla sollicitudin a. Suspendisse sodales sem et velit auctor pharetra. Quisque aliquet accumsan enim eu vestibulum. Cras sit amet porta ligula. Integer tempor, libero vel semper hendrerit, sem quam molestie eros, id viverra tellus est ut neque.</p>
-  		    <p id="back-to-top" class="text-right"><a href="#top" class="glyphicon glyphicon-home"><span> Back to Top</span></a></p>
-        </div>
-  	  </div>
-
-  	  <div class="menu-tile col-xs-12 col-sm-12 col-md-4 col-lg-4">
-  		  <div id="sushi">
-          <h3 id="sushi" class="text-center">Sushi</h3>
-  		    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida lectus urna, ac auctor massa lobortis non. Donec hendrerit ut mi vitae commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer ullamcorper arcu eu convallis rutrum. Maecenas facilisis pulvinar sem, accumsan euismod eros commodo vel. In leo quam, tristique sit amet ullamcorper vel, egestas eu dui. Morbi consequat mauris ac tellus porta tempor. Ut imperdiet ex nec nisi interdum, nec hendrerit nisl aliquam. Nulla commodo dolor eget lacinia bibendum. Sed consequat pellentesque urna condimentum eleifend. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Quisque ut ligula justo. Integer quis commodo eros, id aliquet tellus. Fusce nec magna vitae sem faucibus bibendum id non libero. Aenean bibendum purus nec neque dignissim, hendrerit ultricies libero dignissim. Vestibulum eu sapien quis enim finibus elementum. In ut blandit dolor. Donec semper nisi enim, sit amet pellentesque lorem pulvinar in. Maecenas tincidunt varius enim, lobortis auctor turpis tincidunt at. Donec scelerisque finibus dolor eu venenatis. Donec id vestibulum erat, vitae faucibus purus. Cras suscipit pellentesque ligula eget vestibulum. Suspendisse sodales fringilla lorem nec consequat. Etiam commodo neque justo, vel ultrices mauris condimentum sed. Aliquam maximus cursus tortor nec volutpat. Integer condimentum, metus sit amet congue imperdiet, nisl turpis tincidunt est, et rhoncus quam tortor ut nulla. Aliquam cursus est vitae semper cursus. Donec pharetra orci vel magna pharetra, ut pulvinar odio vehicula. Morbi fermentum nisl non vehicula porttitor. Maecenas nulla enim, pellentesque sit amet pellentesque eget, faucibus vitae metus. Nam venenatis sem lorem, posuere facilisis nulla sollicitudin a. Suspendisse sodales sem et velit auctor pharetra. Quisque aliquet accumsan enim eu vestibulum. Cras sit amet porta ligula. Integer tempor, libero vel semper hendrerit, sem quam molestie eros, id viverra tellus est ut neque.</p>
-  		    <p id="back-to-top" class="text-right"><a href="#top" class="glyphicon glyphicon-home"><span> Back to Top</span></a></p>
-        </div>  
-  	  </div>
-  	</div>
+  <div id="call-btn" class="visible-xs">
+    <a class="btn" href="tel:410-602-5008">
+    <span class="glyphicon glyphicon-earphone"></span>
+    410-602-5008
+    </a>
   </div>
+  <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
+
+  <div id="main-content" class="container"></div>
 
   <footer class="panel-footer">
-    <div class="container-fluid">
-      <div class="text-center">&copy; Copyright Anupam Aloke 2016</div>
+    <div class="container">
+      <div class="row">
+        <section id="hours" class="col-sm-4">
+          <span>Hours:</span><br>
+          Sun-Thurs: 11:15am - 10:00pm<br>
+          Fri: 11:15am - 2:30pm<br>
+          Saturday Closed
+          <hr class="visible-xs">
+        </section>
+        <section id="address" class="col-sm-4">
+          <span>Address:</span><br>
+          7105 Reisterstown Road<br>
+          Baltimore, MD 21215
+          <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+          <hr class="visible-xs">
+        </section>
+        <section id="testimonials" class="col-sm-4">
+          <p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
+          <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
+        </section>
+      </div>
+      <div class="text-center">&copy; Copyright David Chu's China Bistro 2016</div>
     </div>
   </footer>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="module3-solution/js/jquery-2.1.4.min.js"></script>
-  <script src="module3-solution/js/bootstrap.min.js"></script>
-  <script src="module3-solution/js/script.js"></script>
+  <script src="module4-solution/js/jquery-2.1.4.min.js"></script>
+  <script src="module4-solution/js/bootstrap.min.js"></script>
+  <script src="module4-solution/js/ajax-utils.js"></script>
+  <script src="module4-solution/js/script.js"></script>
 </body>
 </html>
